--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50502315-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-50502315-1');
+        </script>
+
         <meta charset="utf-8">
         <title>Counting Cars in Brussels</title>
         <link rel="stylesheet" href="lib/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -36,7 +46,7 @@
                                 <li>The radius is the cars counted during the previous block of five minutes divided by seven (in pixels). The minimum radius is 5 pixels.</li>
                                 <li>The colour of each circle is determined by the average speed measured the previous block of five minutes: black means <i>no data</i>, red is slow, green is faster than 20 km/h.</li>
                             </ul>
-                            Please share this page if you like it. Comments are welcome on Twitter to <a href="https://twitter.com/shadowmedia">@shadowmedia</a>.
+                            Please share this page if you like it. Comments are welcome on Twitter to <a href="https://twitter.com/shadowmedia">@shadowmedia</a>. (This site uses Google Analytics to know the number of site visits.)
                         </small>
                     </p>
                 </div>
